minikube/server-randomity-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: server-randomity
  name: server-randomity
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server-randomity
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/koala-network: "true"
        io.kompose.service: server-randomity
    spec:
      containers:
        - env:
            - name: JDBC_DATABASE_PASSWORD
              value: Qwert123
            - name: JDBC_DATABASE_URL
              value: jdbc:postgresql://psql-db:5432/postgres
            - name: JDBC_DATABASE_USER
              value: gg
          image: koala1101/server-randomity:latest
          name: server-randomity
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /logs/
              name: server-vol
      restartPolicy: Always
      volumes:
        - name: server-vol
          persistentVolumeClaim:
            claimName: server-vol
status: {}
