minikube/web-randomity-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: web-randomity
  name: web-randomity
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web-randomity
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/koala-network: "true"
        io.kompose.service: web-randomity
    spec:
      containers:
        - env:
            - name: JDBC_DATABASE_PASSWORD
              value: Qwert123
            - name: JDBC_DATABASE_URL
              value: jdbc:postgresql://psql-db:5432/postgres
            - name: JDBC_DATABASE_USER
              value: gg
          image: koala1101/web-randomity:latest
          name: web-randomity
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
